# MusicDownloads

./: .gitignore  LICENSE  MD_System_Integration_Scripts.py  MusicDownloader.py  README.md  pyproject.toml  requirements.txt  音乐类型.txt
src/: AudioTrackProcessing.py  ConcurrentTasks.py  ConfigurationFile.py  ConfigureLogging.py  DataProcessing.py  FileCompression.py  InformationStatistics.py  MusicDownloader(Stop Maintenance).py  MusicDownloader.py  NetworkOperations.py  ProgramEntrance.py  ProgramInitialization.py
